--- a/app/views/errors/error_500.html.erb
+++ b/app/views/errors/error_500.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
   <div class="col-md-12 one-col">
-    <h1>500 Server Error</h1>
+    <h1>500 Internal Server Error</h1>
   </div>
 </div>
